--- a/src/components/Counter/Counter.module.scss
+++ b/src/components/Counter/Counter.module.scss
@@ -1,9 +1,9 @@
+@use '../../common/styles/template';
+
 .darkTheme {
-  background-color: black;
-  color: yellow;
+  @extend %darkTheme;
 }
 
 .lightTheme {
-  background-color: white;
-  color: black;
+  @extend %lightTheme;
 }
