--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,3 +1,5 @@
+@use '../../common/styles/template';
+
 .header {
   display: flex;
   flex-direction: row;
@@ -17,11 +19,9 @@
 }
 
 .darkTheme {
-  background-color: black;
-  color: yellow;
+  @extend %darkTheme;
 }
 
 .lightTheme {
-  background-color: white;
-  color: black;
+  @extend %lightTheme;
 }
